# course-management-tool

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose-prod.yml  docker-compose.dev.yml  docker-compose.yml
Backend/: .dockerignore  DOCKERFILE
Backend/src/: .env.example  main.py  models.py  pyproject.toml  routes.py  settings.py
DB/: Dockerfile  README.md
DB/init/: 00_RechnungsDB_LF12_v2.sql  db_init.sh
DB/init/sql/: 01_Migration.sql
DB/scripts/: db_init.sh
DB/scripts/ords/: enable_tables.sql
DB/scripts/sql/: seed_data.sql
Docker/: nginx.conf
Frontend/: .dockerignore  Dockerfile
Frontend/config/: params.php  web.php
Frontend/web/: index.php
Nginx/: Dockerfile
Ollama/: Dockerfile  entrypoint.sh
frontend/: .dockerignore  Dockerfile
